NEWS for gscreend package

CHANGES IN VERSION 0.99.4
--------------------------

    - Replaced parallel::mclapply() with BiocParallel::bplapply()
    
    - Updated stop/warning/message functions.
