@@ -5,5 +5,6 @@ CHANGES IN VERSION 0.99.4
 
     - Replaced parallel::mclapply() with BiocParallel::bplapply()
     
-    - Updated stop/warning/message functions.
+    - Updated stop/warning/message functions. Testing if sampling 
+      timepoints are named correctly.
 
